Fixed Spacing

--- a/css/mars.css
+++ b/css/mars.css
@@ -123,6 +123,7 @@ select:focus {
   grid-template-columns: auto auto auto;
   grid-gap: 10px;
   justify-content: center;
+  margin-bottom: 5rem;
 }
 #rover-images img {
   width: 400px;
@@ -154,6 +155,9 @@ select:focus {
 @media screen and (max-width: 768px) {
   .header-image {
     height: 30vh;
+  }
+  #reset {
+    margin-bottom: 5rem;
   }
 }
 
